Task 6, 7, 8 modifications as per Tracker comments

--- a/SourceCode/2023/August2023/Deekshitha/Task 6/Main.xaml
+++ b/SourceCode/2023/August2023/Deekshitha/Task 6/Main.xaml
@@ -104,7 +104,7 @@
                 <x:Boolean x:Key="IsAnnotationDocked">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:AppendLine File="{x:Null}" sap2010:Annotation.AnnotationText="This Activity prints all the Array values into a text file step by step" DisplayName="Append Line" FileName="ArrayFile.txt" sap:VirtualizedContainerService.HintSize="333.6,178.4" sap2010:WorkflowViewState.IdRef="AppendLine_2" Text="[currentItem]" UseDefaultEncoding="False">
+            <ui:AppendLine File="{x:Null}" sap2010:Annotation.AnnotationText="This Activity prints all the Array values into a text file step by step" DisplayName="Print values to a text file using append " FileName="ArrayFile.txt" sap:VirtualizedContainerService.HintSize="333.6,178.4" sap2010:WorkflowViewState.IdRef="AppendLine_2" Text="[currentItem]" UseDefaultEncoding="False">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
