--- a/SourceCode/2023/August2023/Deekshitha/Switch-Flowchart-Task 11/Main.xaml
+++ b/SourceCode/2023/August2023/Deekshitha/Switch-Flowchart-Task 11/Main.xaml
@@ -114,7 +114,7 @@
           </sap:WorkflowViewStateService.ViewState>
         </ui:InputDialog>
         <FlowStep.Next>
-          <FlowSwitch x:TypeArguments="x:Int32" x:Name="__ReferenceID0" DisplayName="Flow Switch" sap:VirtualizedContainerService.HintSize="70.4,87.2" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_3">
+          <FlowSwitch x:TypeArguments="x:Int32" x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Flow Switch Activity   executes a set of activities out of multiple, based on the value of a specific expression" DisplayName="Flow Switch" sap:VirtualizedContainerService.HintSize="70.4,87.2" sap2010:WorkflowViewState.IdRef="FlowSwitch`1_3">
             <FlowSwitch.Default>
               <FlowStep x:Name="__ReferenceID7">
                 <sap:WorkflowViewStateService.ViewState>
@@ -147,6 +147,7 @@
                 <av:PointCollection x:Key="4Connector">310,373.59999999999997 310,533.6</av:PointCollection>
                 <av:PointCollection x:Key="5Connector">327.6,373.59999999999997 327.6,490 390,490</av:PointCollection>
                 <av:PointCollection x:Key="6Connector">345.20000000000005,351.79999999999995 375.20000000000005,351.79999999999995 375.20000000000005,410 390,410</av:PointCollection>
+                <x:Boolean x:Key="IsAnnotationDocked">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <FlowStep x:Key="0" x:Name="__ReferenceID1">
