PR RPA_Challenge code
Download File activity is automated.
rpachallenge.com URL is updated in Config File
Download File Path is updated in Config File.

--- a/SourceCode/2023/August2023/Swetha/REF/REF_RPA_Challenge/Framework/CloseAllApplications.xaml
+++ b/SourceCode/2023/August2023/Swetha/REF/REF_RPA_Challenge/Framework/CloseAllApplications.xaml
@@ -61,7 +61,7 @@
       <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="Do the necessary procedures for ending the process (e.g., logout) and close the used applications." DisplayName="Close All Applications" sap:VirtualizedContainerService.HintSize="450,294" sap2010:WorkflowViewState.IdRef="Sequence_2">
+  <Sequence sap2010:Annotation.AnnotationText="Do the necessary procedures for ending the process (e.g., logout) and close the used applications." DisplayName="Close All Applications" sap:VirtualizedContainerService.HintSize="450,441" sap2010:WorkflowViewState.IdRef="Sequence_2">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="strResult" />
     </Sequence.Variables>
@@ -72,5 +72,6 @@
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <ui:LogMessage DisplayName="Log message (close applications)" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Trace" Message="[&quot;Closing applications...&quot;]" />
+    <ui:CloseWindow TimeoutMS="{x:Null}" UseWindow="{x:Null}" DisplayName="Close Window 'chrome.exe Rpa'" sap:VirtualizedContainerService.HintSize="388,107" sap2010:WorkflowViewState.IdRef="CloseWindow_1" InformativeScreenshot="abfffa64bafed3ca0f3f2aee4d3073de" Selector="&lt;html app='chrome.exe' title='Rpa Challenge' /&gt;" WaitForReady="NONE" />
   </Sequence>
 </Activity>
